--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ img {
 hr{
     border: none;
     border-top-style: dotted;
-    height: px;
+    /* border-bottom-style: dotted; */
+    /* height: 2px; */;
     border-color: #EEB0B0 ;
     width: 30%;
 
